fix: hide horizontal scroll overflow

--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,10 @@
 @variant in-view (&.is-visible);
 
 @layer base {
+  body {
+    @apply overflow-x-hidden;
+  }
+
   code {
     @apply font-jetbrains-mono;
   }
